[+] added ReceiptFilter [+] added findReceipts method to wrapper